--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,4 @@
 
-.logo{
-    width: 6vw;
-}
-.footerLogo{
-    width: 45%;
-}
-
-h5{
-font-family: 'Henny Penny','Pattaya'; 
-}
-
-
 /* slider */
 .adjustSlide{
     width: 100%;
@@ -23,19 +11,6 @@ font-family: 'Henny Penny','Pattaya';
 /* slider */
 
 
-/* footer */
-svg{
-    position: relative;
-    bottom: 3px;
-    right: 5px;
-    width: 13px;
-    fill: #fff;
-}
-
-#followus a{
-    text-decoration: none;
-}
-/* footer */
 
 /* Information */
 .info{
@@ -98,4 +73,35 @@ svg{
     margin-top: auto;
     margin-left: 15%;
 
+}
+
+/* information */
+
+
+/* Funders */
+
+.funders{
+    background-color: #212529;
+    justify-content: space-around;
+    display: flex;
+    margin: auto;
+    font-size: 0.85rem;
+    padding: 5%;
+}
+
+.funders img{
+    width: 100%;
+    margin: auto;
+    height: 45vh;
+}
+
+.card{
+    transition: 0.2s;
+    position: relative;
+    bottom: 0;
+}
+
+.card:hover{
+    box-shadow: 0px 10px 13px 3px #ffffff, -2px 10px 18px 2px rgba(255,255,255,0);
+    bottom: 10px;
 }
