--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,7 @@
+
+body{
+    background-color: #212529; 
+}
 .about{
     background-color: #212529;
     color: #fff;
@@ -16,4 +20,10 @@
     height: 50%;
     padding: 2%;
     margin: auto;
+}
+
+.mybanner{
+    text-align: center;
+    color: #ffffff;
+    background: linear-gradient(90deg, rgba(53,59,65,1) 0%, rgba(33,37,41,1) 50%, rgba(53,59,65,1) 100%);
 }
