--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,12 @@ body{
     width: 50%;
     padding: 3% 0px;
 }
+.mybanner{
+    text-align: center;
+    color: #ffffff;
+    background: linear-gradient(90deg, rgba(53,59,65,1) 0%, rgba(33,37,41,1) 50%, rgba(53,59,65,1) 100%);
+}
+
 
 #enterbtn{
     text-align: center;}
